--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -92,4 +92,7 @@
         <file alias="zh_CN">locale/bitcoin_zh_CN.qm</file>
         <file alias="zh_TW">locale/bitcoin_zh_TW.qm</file>
     </qresource>
+    <qresource prefix="/styles">
+        <file>res/stylesheets/walletstyle.qss</file>
+    </qresource>
 </RCC>
