--- a/src/qt/forms/optionsdialog.ui
+++ b/src/qt/forms/optionsdialog.ui
@@ -79,7 +79,7 @@
        <item>
         <widget class="QLabel" name="reserveBalanceInfoLabel">
          <property name="text">
-          <string>Reserved amount does not participate in staking and is therefore spendable at any time.</string>
+          <string>Reserved amount does not participate in milking and is therefore spendable at any time.</string>
          </property>
          <property name="textFormat">
           <enum>Qt::PlainText</enum>
