--- a/src/qt/forms/askpassphrasedialog.ui
+++ b/src/qt/forms/askpassphrasedialog.ui
@@ -108,7 +108,7 @@
         <string>Serves to disable the trivial sendmoney when OS account compromised. Provides no real security.</string>
        </property>
        <property name="text">
-        <string>For staking only</string>
+        <string>For milking only</string>
        </property>
        <property name="visible">
         <bool>false</bool>
